2010-09-01  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-html.el (gnus-html-wash-tags)
	(gnus-html-schedule-image-fetching, gnus-html-prefetch-images): Add
	extra logging.

2010-09-01  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-html.el (gnus-html-wash-tags): Delete the IMG_ALT region.

2010-09-01  Stefan Monnier  <monnier@iro.umontreal.ca>

	Fix up some byte-compiler warnings.
	* gnus.el (gnus-group-find-parameter, gnus-kill-save-kill-buffer):
	* gnus-cite.el (gnus-article-highlight-citation, gnus-dissect-cited-text)
	(gnus-article-fill-cited-article, gnus-article-hide-citation)
	(gnus-article-hide-citation-in-followups, gnus-cite-toggle):
	* gnus-group.el (gnus-group-set-mode-line, gnus-group-quit)
	(gnus-group-set-info, gnus-add-mark): Use with-current-buffer.
	(gnus-group-update-group): Use save-excursion and with-current-buffer.

2010-09-01  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-html.el (gnus-article-html): Decode contents by charset.

2010-09-01  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-html.el (gnus-html-cache-directory, gnus-html-cache-size)
	(gnus-html-frame-width, gnus-blocked-images)
	* message.el (message-prune-recipient-rules): Add custom version.
	* gnus-sum.el (gnus-auto-expirable-marks): Bump custom version.

	* gnus-ems.el (gnus-process-get, gnus-process-put): New compatibility
	functions.

	* gnus-html.el (gnus-html-curl-sentinel): Replace process-get with
	gnus-process-get.

2010-08-31  Julien Danjou  <julien@danjou.info>  (tiny change)

	* nnimap.el (nnimap-request-newgroups): Use nnimap-request-list-method
	instead of lsub directly.

2010-08-31  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* nnwarchive.el: Removed.

	* gnus-soup.el: Removed.

	* nnsoup.el: Removed.

	* nnultimate.el: Removed.

	* gnus-html.el (gnus-blocked-images): New variable.

	* message.el (message-prune-recipients): New function.
	(message-prune-recipient-rules): New variable.

	* gnus-cite.el (gnus-article-natural-long-line-p): New function to